--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<!-- Header -->
 			<section id="header">
 				<header class="major">
-					<h1>Highlights</h1>
-					<p>A fun little { responsive } single pager by <a href="http://html5up.net">HTML5 UP</a></p>
+					<h1>Zixun Zhou</h1>
+					<p>A Chinese student studying at RMIT University</p>
 				</header>
 				<div class="container">
 					<ul class="actions special">
@@ -32,9 +32,14 @@
 					<span class="image fit primary"><img src="images/pic01.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>Who I am</h2>
+							<h2>Personal Information</h2>
 						</header>
-						<p>Aliquam ante ac id. Adipiscing interdum lorem praesent fusce pellentesque arcu feugiat. Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet integer vulputate phasellus lorem ipsum dolor lorem magna consequat sed etiam adipiscing interdum.</p>
+						<p>Name: Zixun Zhou(you can call me Edward)
+Student number: s3692845
+Email address: s3692845@student.rmit.edu.au
+I am from anhui, China. I am currently taking classes in RMIT university. Chinese is my native language and English is my second language.
+Currently I live in the city of Melbourne with my family and a cat. My hobbies are playing computer games, such as LOL and CSGO. Usually like to go swimming, because it can help me grow tall.
+</p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</div>
