--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 4.First, I will study IT technology at school. Second, I will learn the techniques I need on various teaching websites. Third, I will study the skills I need in books. Fourth, I will work in related areas to improve my experience and knowledge during my free time. (For example, to help customers make simple websites and apps) Fifth, continue to learn, increase their academic qualifications and technology, and increase employment rate.
 </p>
 					</div>
-					<a href="#footer" class="goto-next scrolly">Next</a>
+					<a href="#four" class="goto-next scrolly">Next</a>
 				</div>
 			</section>
 <section id="four" class="main special">
@@ -87,7 +87,7 @@
 3.When forming a team, consider the personality and learning style of each teammate as much as possible, and form a team that can improve and improve each other. More choices of active communication team members can help the team to complete the project better.
 						</p>
 					</div>
-					<a href="#footer" class="goto-next scrolly">Next</a>
+					<a href="#five" class="goto-next scrolly">Next</a>
 				</div>
 			</section>
 		<section id="five" class="main special">
@@ -103,42 +103,9 @@ This is a VR game similar to the monster hunter world. Players don't need to use
 The development of this VR game requires a very high level of technical requirements, and the current physical discomfort that the player may experience during the experience, such as dizziness. Because in the virtual reality game, the player usually moves in the first person perspective, it is likely to have a different degree of vertigo reaction, which is related to the human body adaptability and computer configuration, but the main reason is the motion tracking of the virtual reality device itself. problem. When the person is moving the head, the device needs to detect the movement of the head in time and respond to the adjustment of the display angle to give a real sense of presence. Most of the current devices use the motion tracking sensor to achieve this function, but in the process of using, sometimes the picture can not keep up with the head movement, which will bring obvious dizziness and discomfort to the player, so not only the game is required. Open, you need to develop a new VR device and a computer device that can run the game perfectly. And you need to create a super high-quality video screen, giving players a deeper sense of substitution. Developers need at least C# Foundation, Unity Foundation, Unity Project Combat, VR Common Design Patterns, Data Structure, 3D Data Math, Graphics, File Storage, Multithreading, SVN Usage, Socket, AssetBundle, Game Framework, Lua, Python Knowledge And this is a huge project that requires a lot of manpower and material resources to achieve.
 If the project is successful, it will bring the game industry into a new field, which will completely subvert the original game mode. Once this technology matures, the game industry will be completely changed. The video game that was originally in two-dimensional space will be completely abandoned. The game mode that relies solely on the keyboard or the handle operation will become history forever. Instead, it can mobilize all the five senses. The orientation game experience, by then, 3D games will also become mainstream, giving players a real experience that seems to be in a different dimension space. Perfectly solves the problem of modern game substitution and lack of realism. And it will have a huge impact on all walks of life. Bring technology to a whole new world. (For example, in the tourism industry, players can experience the scenery of various countries in the game and have an impact on the tourism industry.)
 						</p>
-					<a href="#footer" class="goto-next scrolly">Next</a>
 				</div>
 			</section>
 
-		<!-- Footer -->
-			<section id="footer">
-				<div class="container">
-					<header class="major">
-						<h2>Get in touch</h2>
-					</header>
-					<form method="post" action="#">
-						<div class="row gtr-uniform">
-							<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-							<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-							<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-							<div class="col-12">
-								<ul class="actions special">
-									<li><input type="submit" value="Send Message" class="primary" /></li>
-								</ul>
-							</div>
-						</div>
-					</form>
-				</div>
-				<footer>
-					<ul class="icons">
-						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands alt fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Demo Images: <a href="http://unsplash.com">Unsplash</a></li>
-					</ul>
-				</footer>
-			</section>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
