--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 					<span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<img src="images/Capture.PNG"  width="300" height="400" alt=""/>
 							<h2>Ideal Job</h2>
 						</header>
+						<img src="images/Capture.PNG"  width="300" height="400" alt=""/>
 						<p>1.This job will make me a member of the game development team. Building a game framework between the game operating system and the game application requires me to actively work with the team. Because I am very interested in computer games and want to develop a game of my own, this work with computer game development is very attractive to me.
 2.This job requires me to have a high level of IT, I need to improve the existing code and process, need high Java technology, need C#.Net experience, and need to understand the game engine, can use Python, Bash, PowerShell scripting technology, also needs to be proficient in the use of Confluence, Jira and other development tools, including IDE, debugger and source code control system. It also requires a very important teamwork, familiar with the game design pattern and object-oriented programming, but also learn to use UI development.
 3.I currently only have basic IT technology, can make simple websites (HTML and php), can also use Java to make simple small programs, and also have basic database and networking knowledge. The project will also be adjusted according to the needs of the user, and the process knowledge of the project development will also be available.
@@ -83,6 +83,10 @@
 						<header class="major">
 							<h2>Personal Profile</h2>
 						</header>
+						<img src="images/Capture1.PNG"  width="200" height="200" alt=""/>
+						<img src="images/Capture2.PNG"  width="200" height="200" alt=""/>
+						<img src="images/Capture3.PNG"  width="200" height="200" alt=""/>
+						<img src="images/Capture4.PNG"  width="200" height="200" alt=""/>
 						<p>1.These test results will allow me to better understand my own personality and learning style, expand my own strengths, improve my own deficiencies, and make people better.
 2.A team is made up of people with different personalities and learning styles. We must understand the correct ways of others, improve our own deficiencies, listen to other people's opinions, actively communicate with team members, accommodate others' deficiencies, and help team members improve.
 3.When forming a team, consider the personality and learning style of each teammate as much as possible, and form a team that can improve and improve each other. More choices of active communication team members can help the team to complete the project better.
