--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
 						<header class="major">
 							<h2>Ideal Job</h2>
 						</header>
+						<p><a href="https://www.seek.com.au/job/39615013?searchrequesttoken=ad78e699-d030-4925-af50-8673f4eb21ac&type=standard">Advertising links</a></p>
 						<img src="images/Capture.PNG"  width="300" height="400" alt=""/>
+						<img src="images/Capture5.PNG"  width="300" height="400" alt=""/>
 						<p>1.This job will make me a member of the game development team. Building a game framework between the game operating system and the game application requires me to actively work with the team. Because I am very interested in computer games and want to develop a game of my own, this work with computer game development is very attractive to me.
 2.This job requires me to have a high level of IT, I need to improve the existing code and process, need high Java technology, need C#.Net experience, and need to understand the game engine, can use Python, Bash, PowerShell scripting technology, also needs to be proficient in the use of Confluence, Jira and other development tools, including IDE, debugger and source code control system. It also requires a very important teamwork, familiar with the game design pattern and object-oriented programming, but also learn to use UI development.
 3.I currently only have basic IT technology, can make simple websites (HTML and php), can also use Java to make simple small programs, and also have basic database and networking knowledge. The project will also be adjusted according to the needs of the user, and the process knowledge of the project development will also be available.
