--- a/index.html
+++ b/index.html
@@ -85,9 +85,12 @@
 						<header class="major">
 							<h2>Personal Profile</h2>
 						</header>
+						<p> Myers-Briggs test </p>
 						<img src="images/Capture1.PNG"  width="400" height="300" alt=""/>
+						<p> learning style test </p>
 						<img src="images/Capture2.PNG"  width="400" height="300" alt=""/>
 						<img src="images/Capture3.PNG"  width="400" height="400" alt=""/>
+						<p> Big Five Personality test </p>
 						<img src="images/Capture4.PNG"  width="400" height="300" alt=""/>
 						<p>1.These test results will allow me to better understand my own personality and learning style, expand my own strengths, improve my own deficiencies, and make people better.
 2.A team is made up of people with different personalities and learning styles. We must understand the correct ways of others, improve our own deficiencies, listen to other people's opinions, actively communicate with team members, accommodate others' deficiencies, and help team members improve.
