--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@ If the project is successful, it will bring the game industry into a new field, 
 						</p>
 				</div>
 			</section>
-			<section>
+			<section id="footer">
+
 			<footer>
 					<ul class="icons">
 						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
