--- a/index.html
+++ b/index.html
@@ -114,9 +114,15 @@ This is a VR game similar to the monster hunter world. Players don't need to use
 The development of this VR game requires a very high level of technical requirements, and the current physical discomfort that the player may experience during the experience, such as dizziness. Because in the virtual reality game, the player usually moves in the first person perspective, it is likely to have a different degree of vertigo reaction, which is related to the human body adaptability and computer configuration, but the main reason is the motion tracking of the virtual reality device itself. problem. When the person is moving the head, the device needs to detect the movement of the head in time and respond to the adjustment of the display angle to give a real sense of presence. Most of the current devices use the motion tracking sensor to achieve this function, but in the process of using, sometimes the picture can not keep up with the head movement, which will bring obvious dizziness and discomfort to the player, so not only the game is required. Open, you need to develop a new VR device and a computer device that can run the game perfectly. And you need to create a super high-quality video screen, giving players a deeper sense of substitution. Developers need at least C# Foundation, Unity Foundation, Unity Project Combat, VR Common Design Patterns, Data Structure, 3D Data Math, Graphics, File Storage, Multithreading, SVN Usage, Socket, AssetBundle, Game Framework, Lua, Python Knowledge And this is a huge project that requires a lot of manpower and material resources to achieve.
 If the project is successful, it will bring the game industry into a new field, which will completely subvert the original game mode. Once this technology matures, the game industry will be completely changed. The video game that was originally in two-dimensional space will be completely abandoned. The game mode that relies solely on the keyboard or the handle operation will become history forever. Instead, it can mobilize all the five senses. The orientation game experience, by then, 3D games will also become mainstream, giving players a real experience that seems to be in a different dimension space. Perfectly solves the problem of modern game substitution and lack of realism. And it will have a huge impact on all walks of life. Bring technology to a whole new world. (For example, in the tourism industry, players can experience the scenery of various countries in the game and have an impact on the tourism industry.)
 						</p>
+					</div>
+						<a href="#five" class="goto-next scrolly">Next</a>
 				</div>
 			</section>
 			<section id="footer">
+				<footer class="major">
+					<h1>Zixun Zhou</h1>
+					<p>A Chinese student studying at RMIT University</p>
+				</footer>
 
 			<footer>
 					<ul class="icons">
