--- a/index.html
+++ b/index.html
@@ -115,16 +115,16 @@ The development of this VR game requires a very high level of technical requirem
 If the project is successful, it will bring the game industry into a new field, which will completely subvert the original game mode. Once this technology matures, the game industry will be completely changed. The video game that was originally in two-dimensional space will be completely abandoned. The game mode that relies solely on the keyboard or the handle operation will become history forever. Instead, it can mobilize all the five senses. The orientation game experience, by then, 3D games will also become mainstream, giving players a real experience that seems to be in a different dimension space. Perfectly solves the problem of modern game substitution and lack of realism. And it will have a huge impact on all walks of life. Bring technology to a whole new world. (For example, in the tourism industry, players can experience the scenery of various countries in the game and have an impact on the tourism industry.)
 						</p>
 					</div>
-						<a href="#five" class="goto-next scrolly">Next</a>
+						<a href="#footer" class="goto-next scrolly">Next</a>
 				</div>
 			</section>
 			<section id="footer">
 				<footer class="major">
 					<h1>Zixun Zhou</h1>
 					<p>A Chinese student studying at RMIT University</p>
-				</footer>
+				
 
-			<footer>
+			
 					<ul class="icons">
 						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
