--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<header class="major">
 							<h2>Personal Information</h2>
 						</header>
-						<p>Name: Zixun Zhou(you can call me Edward).Student number: s3692845.Email address: s3692845@student.rmit.edu.au.I am from anhui, China. I am currently taking classes in RMIT university. Chinese is my native language and English is my second language.Currently I live in the city of Melbourne with my family and a cat. My hobbies are playing computer games, such as LOL and CSGO. Usually like to go swimming, because it can help me grow tall.</p>
+						<p>My name is Zixun Zhou(you can call me Edward).My student number is s3692845 and Email address is s3692845@student.rmit.edu.au.I am from anhui, China. I am currently taking classes in RMIT university. Chinese is my native language and English is my second language.Currently I live in the city of Melbourne with my family and a cat. My hobbies are playing computer games, such as LOL and CSGO. Usually like to go swimming, because it can help me grow tall.</p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</div>
