--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
 						<img src="images/Capture3.PNG"  width="400" height="400" alt=""/>
 						<p> Big Five Personality test </p>
 						<img src="images/Capture4.PNG"  width="400" height="300" alt=""/>
+						<img src="images/Capture7.PNG"  width="400" height="400" alt=""/>
+						<img src="images/Capture8.PNG"  width="400" height="400" alt=""/>
 						<p>1.These test results will allow me to better understand my own personality and learning style, expand my own strengths, improve my own deficiencies, and make people better.
 2.A team is made up of people with different personalities and learning styles. We must understand the correct ways of others, improve our own deficiencies, listen to other people's opinions, actively communicate with team members, accommodate others' deficiencies, and help team members improve.
 3.When forming a team, consider the personality and learning style of each teammate as much as possible, and form a team that can improve and improve each other. More choices of active communication team members can help the team to complete the project better.
