--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
 						<header class="major">
 							<h2>Personal Information</h2>
 						</header>
-						<p>My name is Zixun Zhou(you can call me Edward).My student number is s3692845 and Email address is s3692845@student.rmit.edu.au.I am from anhui, China. I am currently taking classes in RMIT university. Chinese is my native language and English is my second language.Currently I live in the city of Melbourne with my family and a cat. My hobbies are playing computer games, such as LOL and CSGO. Usually like to go swimming, because it can help me grow tall.</p>
+						<img src="images/pic07.jpg" width="300" height="400" alt="" />
+						<p>Name : Zixun Zhou(you can call me Edward)</p>
+						<p>Student number : s3692845 </p>
+						<p>Email address : s3692845@student.rmit.edu.au.</p>
+						<p>I am from anhui, China. I am currently taking classes in RMIT university. Chinese is my native language and English is my second language.Currently I live in the city of Melbourne with my family and a cat. My hobbies are playing computer games, such as LOL and CSGO. Usually like to go swimming, because it can help me grow tall.</p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</div>
