--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<p>Name : Zixun Zhou(you can call me Edward)</p>
 						<p>Student number : s3692845 </p>
 						<p>Email address : s3692845@student.rmit.edu.au.</p>
-						<p>I am from anhui, China. I am currently taking classes in RMIT university. Chinese is my native language and English is my second language.Currently I live in the city of Melbourne with my family and a cat. My hobbies are playing computer games, such as LOL and CSGO. Usually like to go swimming, because it can help me grow tall.</p>
+						<p>I am from anhui, China. I am currently taking classes in RMIT university. Chinese is my native language and English is my second language.Currently I live in the city of Melbourne with my family and a cat. My hobbies are playing computer games, such as LOL and CSGO. In fact, I studied IT because I loved playing computer games since I was a child. Usually like to go swimming, because it can help me grow tall.</p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</div>
