--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
 						<header class="major">
 							<h2>Interest in IT</h2>
 						</header>
-						<p>1.When I was very young, I loved playing computer games. So when I was a child, I decided to work on computers after I grew up. So when I chose a major in college, I chose IT. IT made me feel interested. On the one hand, IT can let me do a lot of things that can't be done in reality, and close the distance between people. At the same time, for me, it is also an unknown world, a world I want to explore.
-2. RMIT is a very good university for me, and its IT major is also a world famous professional. And RMIT University is located in Melbourne, Australia, which is a city that is suitable for people's lives, and my family is here, and my sister is also studying business at RMIT University. So I chose the university of RMIT.
-3. I hope that in learning, I must first learn the IT knowledge that really helps me, and learn the culture of their country, expand their horizons, and exercise fluent English in the process of interacting with people from different countries. 
-</p>
+						<p>When I was very young, I loved playing computer games. So when I was a child, I decided to work on computers after I grew up. So when I chose a major in college, I chose IT. IT made me feel interested. On the one hand, IT can let me do a lot of things that can't be done in reality, and close the distance between people. At the same time, for me, it is also an unknown world, a world I want to explore.</p>
+						<img src="images/pic08.jpg" alt="" />
+                                                <p>RMIT is a very good university for me, and its IT major is also a world famous professional. And RMIT University is located in Melbourne, Australia, which is a city that is suitable for people's lives, and my family is here, and my sister is also studying business at RMIT University. So I chose the university of RMIT.I hope that in learning, I must first learn the IT knowledge that really helps me, and learn the culture of their country, expand their horizons, and exercise fluent English in the process of interacting with people from different countries. </p>
 					
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
