--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<h2>Interest in IT</h2>
 						</header>
 						<p>When I was very young, I loved playing computer games. So when I was a child, I decided to work on computers after I grew up. So when I chose a major in college, I chose IT. IT made me feel interested. On the one hand, IT can let me do a lot of things that can't be done in reality, and close the distance between people. At the same time, for me, it is also an unknown world, a world I want to explore.</p>
-						<img src="images/pic08.jpg" alt="" />
+						<img src="images/pic08.png" alt="" />
                                                 <p>RMIT is a very good university for me, and its IT major is also a world famous professional. And RMIT University is located in Melbourne, Australia, which is a city that is suitable for people's lives, and my family is here, and my sister is also studying business at RMIT University. So I chose the university of RMIT.I hope that in learning, I must first learn the IT knowledge that really helps me, and learn the culture of their country, expand their horizons, and exercise fluent English in the process of interacting with people from different countries. </p>
 					
 					</div>
@@ -72,11 +72,13 @@
 						<p><a href="https://www.seek.com.au/job/39615013?searchrequesttoken=ad78e699-d030-4925-af50-8673f4eb21ac&type=standard">Advertising links</a></p>
 						<img src="images/Capture.PNG"  width="300" height="400" alt=""/>
 						<img src="images/Capture5.PNG"  width="300" height="500" alt=""/>
-						<p>1.This job will make me a member of the game development team. Building a game framework between the game operating system and the game application requires me to actively work with the team. Because I am very interested in computer games and want to develop a game of my own, this work with computer game development is very attractive to me.
-2.This job requires me to have a high level of IT, I need to improve the existing code and process, need high Java technology, need C#.Net experience, and need to understand the game engine, can use Python, Bash, PowerShell scripting technology, also needs to be proficient in the use of Confluence, Jira and other development tools, including IDE, debugger and source code control system. It also requires a very important teamwork, familiar with the game design pattern and object-oriented programming, but also learn to use UI development.
-3.I currently only have basic IT technology, can make simple websites (HTML and php), can also use Java to make simple small programs, and also have basic database and networking knowledge. The project will also be adjusted according to the needs of the user, and the process knowledge of the project development will also be available.
-4.First, I will study IT technology at school. Second, I will learn the techniques I need on various teaching websites. Third, I will study the skills I need in books. Fourth, I will work in related areas to improve my experience and knowledge during my free time. (For example, to help customers make simple websites and apps) Fifth, continue to learn, increase their academic qualifications and technology, and increase employment rate.
-</p>
+						<p>This job will make me a member of the game development team. Building a game framework between the game operating system and the game application requires me to actively work with the team. Because I am very interested in computer games and want to develop a game of my own, this work with computer game development is very attractive to me.</p>
+						<p><b>Skills, qualifications and experience required</b></p>
+                                                <p>This job requires me to have a high level of IT, I need to improve the existing code and process, need high Java technology, need C#.Net experience, and need to understand the game engine, can use Python, Bash, PowerShell scripting technology, also needs to be proficient in the use of Confluence, Jira and other development tools, including IDE, debugger and source code control system. It also requires a very important teamwork, familiar with the game design pattern and object-oriented programming, but also learn to use UI development.</p>
+						<p><b>My existing skills and experience</b></p>
+						<p>I currently only have basic IT technology, can make simple websites (HTML and php), can also use Java to make simple small programs, and also have basic database and networking knowledge. The project will also be adjusted according to the needs of the user, and the process knowledge of the project development will also be available.I have experience working on a website alone and team building app experience.</p>
+						<p><b>Plan</b></p>
+						<p>First, I will study IT technology at school. Second, I will learn the techniques I need on various teaching websites. Third, I will study the skills I need in books. Fourth, I will work in related areas to improve my experience and knowledge during my free time. (For example, to help customers make simple websites and apps) Fifth, continue to learn, increase their academic qualifications and technology, and increase employment rate.</p>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
 				</div>
