--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 						<img src="images/pic07.jpg" width="300" height="400" alt="" />
 						<p>Name : Zixun Zhou(you can call me Edward)</p>
 						<p>Student number : s3692845 </p>
-						<p>Email address : s3692845@student.rmit.edu.au.</p>
-						<p>I am from anhui, China. I am currently taking classes in RMIT university. Chinese is my native language and English is my second language.Currently I live in the city of Melbourne with my family and a cat. My hobbies are playing computer games, such as LOL and CSGO. In fact, I studied IT because I loved playing computer games since I was a child. Usually like to go swimming, because it can help me grow tall.</p>
+						<p>Email address : s3692845@student.rmit.edu.au</p>
+						<p>Education to date : Diploma of IT</p>
+						<p>I am from anhui, China. I am currently taking classes in RMIT university. Chinese is my native language and English is my second language.Currently I live in the city of Melbourne with my family and a cat.I have been in Melbourne for a year, just graduated from the Diploma of IT. My hobbies are playing computer games, such as LOL and CSGO. In fact, I studied IT because I loved playing computer games since I was a child. Usually like to go swimming, because it can help me grow tall.</p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</div>
@@ -90,19 +91,18 @@
 						<header class="major">
 							<h2>Personal Profile</h2>
 						</header>
-						<p> Myers-Briggs test </p>
+						<p><b> Myers-Briggs test </b></p>
 						<img src="images/Capture1.PNG"  width="400" height="300" alt=""/>
-						<p> learning style test </p>
+						<p><b> learning style test </b></p>
 						<img src="images/Capture2.PNG"  width="500" height="300" alt=""/>
 						<img src="images/Capture3.PNG"  width="400" height="400" alt=""/>
-						<p> Big Five Personality test </p>
+						<p><b> Big Five Personality test </b></p>
 						<img src="images/Capture4.PNG"  width="400" height="300" alt=""/>
 						<img src="images/Capture7.PNG"  width="400" height="400" alt=""/>
 						<img src="images/Capture8.PNG"  width="400" height="400" alt=""/>
-						<p>1.These test results will allow me to better understand my own personality and learning style, expand my own strengths, improve my own deficiencies, and make people better.
-2.A team is made up of people with different personalities and learning styles. We must understand the correct ways of others, improve our own deficiencies, listen to other people's opinions, actively communicate with team members, accommodate others' deficiencies, and help team members improve.
-3.When forming a team, consider the personality and learning style of each teammate as much as possible, and form a team that can improve and improve each other. More choices of active communication team members can help the team to complete the project better.
-						</p>
+						<p>These test results will allow me to better understand my own personality and learning style, expand my own strengths, improve my own deficiencies, and make people better.</p>
+						<p>A team is made up of people with different personalities and learning styles. We must understand the correct ways of others, improve our own deficiencies, listen to other people's opinions, actively communicate with team members, accommodate others' deficiencies, and help team members improve.</p>
+						<p>When forming a team, consider the personality and learning style of each teammate as much as possible, and form a team that can improve and improve each other. More choices of active communication team members can help the team to complete the project better.</p>
 					</div>
 					<a href="#five" class="goto-next scrolly">Next</a>
 				</div>
