--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 						<p>Student number : s3692845 </p>
 						<p>Email address : s3692845@student.rmit.edu.au</p>
 						<p>Education to date : Diploma of IT</p>
+						<p>Languages spoken : Mandarin and English</p>
 						<p>I am from anhui, China. I am currently taking classes in RMIT university. Chinese is my native language and English is my second language.Currently I live in the city of Melbourne with my family and a cat.I have been in Melbourne for a year, just graduated from the Diploma of IT. My hobbies are playing computer games, such as LOL and CSGO. In fact, I studied IT because I loved playing computer games since I was a child. Usually like to go swimming, because it can help me grow tall.</p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
