--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<section id="header">
 				<header class="major">
 					<h1>Zixun Zhou</h1>
-					<p>A Chinese student studying at RMIT University</p>
+					<p>My Profile</p>
 				</header>
 				<div class="container">
 					<ul class="actions special">
@@ -136,7 +136,7 @@
 			<section id="footer">
 				<footer class="major">
 					<h1>Zixun Zhou</h1>
-					<p>A Chinese student studying at RMIT University</p>
+					<p>A student studying at RMIT University</p>
 					<ul class="icons">
 						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
