--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 			</section>
 		<section id="five" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic09.jpeg" alt="" /></span>
+					<span class="image fit primary"><img src="images/pic09.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>Project ideas</h2>
